<?xml version="1.0"?>
<package format="3">
  <name>noether_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 integration for Noether</description>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>rclcpp</depend>
  <depend>pcl_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_eigen</depend>
  <depend>noether_tpp</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
